--- a/app/argilla/templates/elasticsearch-deployment.yaml
+++ b/app/argilla/templates/elasticsearch-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enableOptionalResource }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -42,3 +43,4 @@ spec:
         - name: elasticsearch-data
           persistentVolumeClaim:
             claimName: elasticsearch-pvc
+{{- end }}
