--- a/app/argilla/templates/argilla-server-deployment.yaml
+++ b/app/argilla/templates/argilla-server-deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: argilla-server
     spec:
+    {{- if .Values.enableOptionalResource }}
       initContainers:
         - name: wait-for-elasticsearch
           image: alpine/curl:latest
@@ -21,6 +22,7 @@ spec:
             "ELASTICSEARCH_URL={{ .Values.argilladeployment.elasticurl }}; status_code=$(curl -s -o /dev/null -w '%{http_code}' $ELASTICSEARCH_URL);
           while [ $status_code -ne 200 ]; do sleep 5; status_code=$(curl -s -o /dev/null -w '%{http_code}' $ELASTICSEARCH_URL);
           echo Sleeping...; done; echo Elasticsearch Connected " ]
+    {{- end }}
       containers:
         - name: argilla-server
           image: argilla/argilla-server:latest
